--- a/spring-social-showcase/build.gradle
+++ b/spring-social-showcase/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'eclipse'
+//apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'tomcat'
